fix collapsing nav responsive

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -30,13 +30,6 @@ ul li:last-child
 	text-transform: uppercase
 	font-size: 14px
 
-.in.collapse.nav-collapse ul li:last-child
-	a
-		border: none
-		text-transform: none
-		font-size: inherit
-		padding-left: 0px
-
 
 // banner
 .hero-unit
@@ -90,15 +83,24 @@ ul li:last-child
 	padding: 13px 19px
 	margin-top: 20px
 
-/* Large desktop */
-@media (min-width: 1200px) {
+// /* Large desktop */
+// @media (min-width: 1200px) {
 
-}
+// }
  
-/* Portrait tablet to landscape and desktop */
-@media (min-width: 768px) and (max-width: 979px) {
+//  Portrait tablet to landscape and desktop 
+// @media (min-width: 768px) and (max-width: 979px) {
 
-}
+// }
+
+/* Portrait tablet to landscape phone (Collapsed NAV) */
+@media (max-width: 979px)
+
+	.collapse.nav-collapse ul li:last-child a
+		border: none
+		text-transform: none
+		font-size: inherit
+		padding-left: 0px
  
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px)
@@ -121,6 +123,7 @@ ul li:last-child
 
 	.tagline
 		font-size: 14px
+
  
 /* Landscape phones and down */
 @media (max-width: 480px)
